--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <li><i class="fas fa-check"></i> Dropout Rate: 0.5</li>
                         <li><i class="fas fa-check"></i>  Regularization: L2 with 0.001 rate</li>
                     </ul>
-                    <img src="/images/results.png" alt="Graph" class="graph">
+                    <img src="./images/results.png" alt="Graph" class="graph">
                     <ul>
                         <li><i class="fas fa-check"></i> Accuracy: 92.36%</li>
                         <li><i class="fas fa-check"></i> Precision: 96.95%</li>
