--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
         </section>
     </main>
     <footer>
-        <p><a href="https://github.com/vipul-dalal/MiscellaneousImage-Detect" target="_blank"><i
+        <p><a href="https://github.com/versus-studio/MiscellaneousImage-Detect" target="_blank"><i
                     class="fab fa-github"></i> Github</a>
         </p>
-        <p>Designed By <a href="https://www.instagram.com/code_with_vd/" target="_blank">Code_With_VD</a></p>
+        <p>Designed By <a href="https://www.instagram.com/versus_studio.vs/" target="_blank">Versus Studio</a></p>
     </footer>
     <script src="image-slider.js"></script>
     <script>
